--- a/homework3.ipynb
+++ b/homework3.ipynb
@@ -113,50 +113,72 @@
     "$$-k C_{eo} \\partial t = \\partial C_a \\frac{(C_a + C_m)}{C_a}$$\n",
     "$$-kC_{eo} \\int_{0}^{t} \\partial t = \\int_{C_{a0}}^{C_a} \\partial C_a + C_m \\int_{C_{a0}}^{C_a} \\frac{\\partial C_a}{C_a}$$\n",
     "$$-kC_{eo}t = (C_a-C_{a0})+C_m ln(\\frac{C_a}{C_{a0}})$$\n",
-    "Now we can create a linear system for each pair of data points in time and then fit a least squares line to solve for k and $C_m$"
+    "Now after a bit of rearranging we can get this into a y = mx+b form:\n",
+    "$$-kC_{eo}t = (C_a-C_{a0})+C_m ln(\\frac{C_a}{C_{a0}}) \\rightarrow \\frac{ln(C_a/C_{a0})}{C_{a0}-C_{a}} = -\\frac{k_3C_{eo}}{C_m} \\frac{t}{C_{a0}-C_{a}} + \\frac{1}{C_m}$$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "t = np.linspace(0,11,12)\n",
-    "Ca = np.array([1,0.84,0.68,0.53,0.38,0.27,0.16,0.09,0.04,0.018,0.006,0.0025])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 67,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "A = np.empty((0,2))\n",
-    "b = np.empty((0,1))\n",
-    "for i in range(len(Ca)):\n",
-    "    for j in range(i+1,len(Ca)):\n",
-    "            data = np.array([[-0.01*(t[j]-t[i]), np.log(Ca[j]/Ca[i])]])\n",
-    "            A = np.append(A, data, axis = 0)\n",
-    "            b = np.append(b, np.array([[Ca[j]-Ca[i]]]), axis = 0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "k3 is: 199.881 Cm is: -0.199\n"
+      "                            OLS Regression Results                            \n",
+      "==============================================================================\n",
+      "Dep. Variable:                      y   R-squared:                       0.998\n",
+      "Model:                            OLS   Adj. R-squared:                  0.998\n",
+      "Method:                 Least Squares   F-statistic:                     4592.\n",
+      "Date:                Tue, 02 Feb 2021   Prob (F-statistic):           1.68e-13\n",
+      "Time:                        23:33:56   Log-Likelihood:                 13.503\n",
+      "No. Observations:                  11   AIC:                            -23.01\n",
+      "Df Residuals:                       9   BIC:                            -22.21\n",
+      "Df Model:                           1                                         \n",
+      "Covariance Type:            nonrobust                                         \n",
+      "==============================================================================\n",
+      "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "------------------------------------------------------------------------------\n",
+      "const          5.0960      0.118     43.042      0.000       4.828       5.364\n",
+      "x1            -1.0102      0.015    -67.767      0.000      -1.044      -0.977\n",
+      "==============================================================================\n",
+      "Omnibus:                        0.306   Durbin-Watson:                   2.331\n",
+      "Prob(Omnibus):                  0.858   Jarque-Bera (JB):                0.155\n",
+      "Skew:                          -0.222   Prob(JB):                        0.925\n",
+      "Kurtosis:                       2.623   Cond. No.                         40.4\n",
+      "==============================================================================\n",
+      "\n",
+      "Notes:\n",
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Jacob\\anaconda3\\lib\\site-packages\\scipy\\stats\\stats.py:1603: UserWarning: kurtosistest only valid for n>=20 ... continuing anyway, n=11\n",
+      "  warnings.warn(\"kurtosistest only valid for n>=20 ... continuing \"\n"
      ]
     }
    ],
    "source": [
-    "res = np.linalg.lstsq(A,b, rcond = None)[0]\n",
-    "print('k3 is:', '{:.3f}'.format(res[0][0]), 'Cm is:', '{:.3f}'.format(res[1][0]))"
+    "Ca = np.array([0.84,0.68,0.53,0.38,0.27,0.16,0.09,0.04,0.018,0.006,0.0025])\n",
+    "ca0 = 1\n",
+    "y = np.log(Ca)/(ca0-Ca)\n",
+    "t = np.arange(1,12)\n",
+    "x = t/(ca0-Ca)\n",
+    "x = sm.add_constant(x)\n",
+    "model = sm.OLS(y, x)\n",
+    "results = model.fit()\n",
+    "print(results.summary())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we can see that our $b = \\frac{1}{C_m} = 5.0960 \\rightarrow C_m = 0.196 mM$ and then we can plug that into $\\frac{k_3C_{eo}}{C_m} \\rightarrow k_3 = 19.8 \\; hr^{-1}$"
    ]
   },
   {
